[metadata]
name = rf-pd-gait
version = 0.0
description = A short description of the project.
author = Yingcheng Liu
author_email = liuyc@mit.edu
license = MIT

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.9
packages = rf-pd-gait
setup_requires =
    setuptools
    # setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
    # setuptools >=46.4.0     # let's you use attr: to extract version from a module

 # TODO: pip install . resulted in installing other dependencies <13-01-22, YL> #
install_requires =
    pre-commit
    black
    isort
    mypy
    flake8
    autoflake

[flake8]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
ignore =
    W503  # E203 and W503 have edge cases handled by black
    E203
max-line-length = 88
per-file-ignores =
    **/__init__.py: F401,F403,E402
    __init__.py: F401,F403,E402
exclude =
    .git
    .nox
    .tox
    envs
    log
    build
    dist

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
ensure_newline_before_comments=True

known_myself = server,ppmi

known_third_party =
    numpy
    joblib
    scipy
    tqdm
    pandas
    yaml
    fvcore
    matplotlib
    cv2
    torch
    torchvision
    PIL
    pycocotools
    yacs
    termcolor
    cityscapesscripts
    tabulate
    lvis
    psutil
    pkg_resources
    caffe2
    onnx
    streamlit
    dateparser
    pingouin
    statsmodels
    sklearn
    altair
    boto3
    seaborn

sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    myself
    LOCALFOLDER

default_section = FIRSTPARTY


[mypy]
python_version = 3.9

# error control
show_column_numbers = True
show_error_context = True

# import handling
follow_imports = silent
ignore_missing_imports = True
